# cmake-package-export-example

./: CMakeLists.txt  README.md
clientCode/: CMakeLists.txt  client.cpp
include/thread_pool/: thread_pool.h
src/: thread_pool.cpp
tst/: test_thread_pool.cpp
